Fixed logo animation is slide outside from main component and fixed toast-message is visible outside main component

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -7,6 +7,7 @@
     height: 100vh;
     margin: 0 auto;
     padding: 75px;
+    position: relative;
 
     span {
         @include span;
@@ -33,7 +34,7 @@ header {
     @include flex-layout(unset, flex-end, center, unset);
 
     svg {
-        position: fixed;
+        position: absolute;
         top: 75px;
         left: 75px;
         z-index: 1;
