--- a/src/app/auth/toast-message/toast-message.component.scss
+++ b/src/app/auth/toast-message/toast-message.component.scss
@@ -19,6 +19,7 @@
     height: 100%;
     margin: 0 auto;
     transform: translateX(100%);
+    opacity: 0;
     transition: transform 0.5s ease;
 
     span {
@@ -40,5 +41,6 @@
 }
 
 .show {
+    opacity: 1;
     transform: translateX(0);
 }
